--- a/C03/w02/C03w02_nb_pa1.ipynb
+++ b/C03/w02/C03w02_nb_pa1.ipynb
@@ -176,190 +176,7 @@
        "  'like',\n",
        "  'easy',\n",
        "  'little',\n",
-       "  'seat',\n",
-       "  'old',\n",
-       "  'well',\n",
-       "  'get',\n",
-       "  'also',\n",
-       "  'really',\n",
-       "  'son',\n",
-       "  'time',\n",
-       "  'bought',\n",
-       "  'product',\n",
-       "  'good',\n",
-       "  'daughter',\n",
-       "  'much',\n",
-       "  'loves',\n",
-       "  'stroller',\n",
-       "  'put',\n",
-       "  'months',\n",
-       "  'car',\n",
-       "  'still',\n",
-       "  'back',\n",
-       "  'used',\n",
-       "  'recommend',\n",
-       "  'first',\n",
-       "  'even',\n",
-       "  'perfect',\n",
-       "  'nice',\n",
-       "  'bag',\n",
-       "  'two',\n",
-       "  'using',\n",
-       "  'got',\n",
-       "  'fit',\n",
-       "  'around',\n",
-       "  'diaper',\n",
-       "  'enough',\n",
-       "  'month',\n",
-       "  'price',\n",
-       "  'go',\n",
-       "  'could',\n",
-       "  'soft',\n",
-       "  'since',\n",
-       "  'buy',\n",
-       "  'room',\n",
-       "  'works',\n",
-       "  'made',\n",
-       "  'child',\n",
-       "  'keep',\n",
-       "  'size',\n",
-       "  'small',\n",
-       "  'need',\n",
-       "  'year',\n",
-       "  'big',\n",
-       "  'make',\n",
-       "  'take',\n",
-       "  'easily',\n",
-       "  'think',\n",
-       "  'crib',\n",
-       "  'clean',\n",
-       "  'way',\n",
-       "  'quality',\n",
-       "  'thing',\n",
-       "  'better',\n",
-       "  'without',\n",
-       "  'set',\n",
-       "  'new',\n",
-       "  'every',\n",
-       "  'cute',\n",
-       "  'best',\n",
-       "  'bottles',\n",
-       "  'work',\n",
-       "  'purchased',\n",
-       "  'right',\n",
-       "  'lot',\n",
-       "  'side',\n",
-       "  'happy',\n",
-       "  'comfortable',\n",
-       "  'toy',\n",
-       "  'able',\n",
-       "  'kids',\n",
-       "  'bit',\n",
-       "  'night',\n",
-       "  'long',\n",
-       "  'fits',\n",
-       "  'see',\n",
-       "  'us',\n",
-       "  'another',\n",
-       "  'play',\n",
-       "  'day',\n",
-       "  'money',\n",
-       "  'monitor',\n",
-       "  'tried',\n",
-       "  'thought',\n",
-       "  'never',\n",
-       "  'item',\n",
-       "  'hard',\n",
-       "  'plastic',\n",
-       "  'however',\n",
-       "  'disappointed',\n",
-       "  'reviews',\n",
-       "  'something',\n",
-       "  'going',\n",
-       "  'pump',\n",
-       "  'bottle',\n",
-       "  'cup',\n",
-       "  'waste',\n",
-       "  'return',\n",
-       "  'amazon',\n",
-       "  'different',\n",
-       "  'top',\n",
-       "  'want',\n",
-       "  'problem',\n",
-       "  'know',\n",
-       "  'water',\n",
-       "  'try',\n",
-       "  'received',\n",
-       "  'sure',\n",
-       "  'times',\n",
-       "  'chair',\n",
-       "  'find',\n",
-       "  'hold',\n",
-       "  'gate',\n",
-       "  'open',\n",
-       "  'bottom',\n",
-       "  'away',\n",
-       "  'actually',\n",
-       "  'cheap',\n",
-       "  'worked',\n",
-       "  'getting',\n",
-       "  'ordered',\n",
-       "  'came',\n",
-       "  'milk',\n",
-       "  'bad',\n",
-       "  'part',\n",
-       "  'worth',\n",
-       "  'found',\n",
-       "  'cover',\n",
-       "  'many',\n",
-       "  'design',\n",
-       "  'looking',\n",
-       "  'weeks',\n",
-       "  'say',\n",
-       "  'wanted',\n",
-       "  'look',\n",
-       "  'place',\n",
-       "  'purchase',\n",
-       "  'looks',\n",
-       "  'second',\n",
-       "  'piece',\n",
-       "  'box',\n",
-       "  'pretty',\n",
-       "  'trying',\n",
-       "  'difficult',\n",
-       "  'together',\n",
-       "  'though',\n",
-       "  'give',\n",
-       "  'started',\n",
-       "  'anything',\n",
-       "  'last',\n",
-       "  'company',\n",
-       "  'come',\n",
-       "  'returned',\n",
-       "  'maybe',\n",
-       "  'took',\n",
-       "  'broke',\n",
-       "  'makes',\n",
-       "  'stay',\n",
-       "  'instead',\n",
-       "  'idea',\n",
-       "  'head',\n",
-       "  'said',\n",
-       "  'less',\n",
-       "  'went',\n",
-       "  'working',\n",
-       "  'high',\n",
-       "  'unit',\n",
-       "  'seems',\n",
-       "  'picture',\n",
-       "  'completely',\n",
-       "  'wish',\n",
-       "  'buying',\n",
-       "  'babies',\n",
-       "  'won',\n",
-       "  'tub',\n",
-       "  'almost',\n",
-       "  'either'],\n",
+       "  'seat'],\n",
        " 193)"
       ]
      },
@@ -371,7 +188,7 @@
    "source": [
     "important_words = load_important_words()\n",
     "\n",
-    "important_words, len(important_words)"
+    "important_words[0:10], len(important_words)"
    ]
   },
   {
@@ -427,15 +244,28 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['name', 'review', 'rating', 'sentiment', 'review_clean', 'baby', 'one', 'great', 'love', 'use', 'would', 'like', 'easy', 'little', 'seat', 'old', 'well', 'get', 'also', 'really', 'son', 'time', 'bought', 'product', 'good', 'daughter', 'much', 'loves', 'stroller', 'put', 'months', 'car', 'still', 'back', 'used', 'recommend', 'first', 'even', 'perfect', 'nice', 'bag', 'two', 'using', 'got', 'fit', 'around', 'diaper', 'enough', 'month', 'price', 'go', 'could', 'soft', 'since', 'buy', 'room', 'works', 'made', 'child', 'keep', 'size', 'small', 'need', 'year', 'big', 'make', 'take', 'easily', 'think', 'crib', 'clean', 'way', 'quality', 'thing', 'better', 'without', 'set', 'new', 'every', 'cute', 'best', 'bottles', 'work', 'purchased', 'right', 'lot', 'side', 'happy', 'comfortable', 'toy', 'able', 'kids', 'bit', 'night', 'long', 'fits', 'see', 'us', 'another', 'play', 'day', 'money', 'monitor', 'tried', 'thought', 'never', 'item', 'hard', 'plastic', 'however', 'disappointed', 'reviews', 'something', 'going', 'pump', 'bottle', 'cup', 'waste', 'return', 'amazon', 'different', 'top', 'want', 'problem', 'know', 'water', 'try', 'received', 'sure', 'times', 'chair', 'find', 'hold', 'gate', 'open', 'bottom', 'away', 'actually', 'cheap', 'worked', 'getting', 'ordered', 'came', 'milk', 'bad', 'part', 'worth', 'found', 'cover', 'many', 'design', 'looking', 'weeks', 'say', 'wanted', 'look', 'place', 'purchase', 'looks', 'second', 'piece', 'box', 'pretty', 'trying', 'difficult', 'together', 'though', 'give', 'started', 'anything', 'last', 'company', 'come', 'returned', 'maybe', 'took', 'broke', 'makes', 'stay', 'instead', 'idea', 'head', 'said', 'less', 'went', 'working', 'high', 'unit', 'seems', 'picture', 'completely', 'wish', 'buying', 'babies', 'won', 'tub', 'almost', 'either'] 198\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(['name',\n",
+       "  'review',\n",
+       "  'rating',\n",
+       "  'sentiment',\n",
+       "  'review_clean',\n",
+       "  'baby',\n",
+       "  'one',\n",
+       "  'great',\n",
+       "  'love',\n",
+       "  'use'],\n",
+       " 198)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(products.column_names(), len(products.column_names()))"
+    "products.column_names()[0:10], len(products.column_names())"
    ]
   },
   {
@@ -453,9 +283,10 @@
     {
      "data": {
       "text/plain": [
-       "dtype: int\n",
-       "Rows: 53072\n",
-       "[0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ... ]"
+       "(dtype: int\n",
+       " Rows: 10\n",
+       " [0, 0, 0, 1, 0, 0, 0, 0, 0, 0],\n",
+       " 53072)"
       ]
      },
      "execution_count": 11,
@@ -464,7 +295,7 @@
     }
    ],
    "source": [
-    "products['perfect']"
+    "products['perfect'][0:10], len(products['perfect'])"
    ]
   },
   {
@@ -1332,13 +1163,6 @@
     "- [ ] even\n",
     "- [ ] return"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
