--- a/C03/w07/C03w07_nb_pa.ipynb
+++ b/C03/w07/C03w07_nb_pa.ipynb
@@ -1190,11 +1190,11 @@
     "        log_likelihood_all.append(lp)\n",
     "        if itr <= 15 or (itr <= 1000 and itr % 100 == 0) or (itr <= 10000 and itr % 1000 == 0) \\\n",
     "         or itr % 10000 == 0 or itr == max_iter-1:\n",
-    "            data_sz = len(feature_matrix)\n",
+    "            # data_sz = len(feature_matrix)\n",
     "            print('Iteration %*d: Average log likelihood (of data points in batch [%0*d:%0*d]) = %.8f' % \\\n",
     "                (int(np.ceil(np.log10(max_iter))), itr, \\\n",
-    "                 int(np.ceil(np.log10(data_sz))), ix, \\\n",
-    "                 int(np.ceil(np.log10(data_sz))), n_ix, lp))\n",
+    "                 int(np.ceil(np.log10(N))), ix, \\\n",
+    "                 int(np.ceil(np.log10(N))), n_ix, lp))\n",
     "        \n",
     "        ix += batch_sz                                # if we made a complete pass over data, shuffle and restart\n",
     "        if ix + batch_sz > N:\n",
@@ -1268,7 +1268,8 @@
     "\n",
     "For the remainder of the assignment, we will compare stochastic gradient ascent against batch gradient ascent. For this, we need a reference implementation of batch gradient ascent. But do we need to implement this from scratch?\n",
     "\n",
-    "**Quiz Question:** For what value of batch size `B` above is the stochastic gradient ascent function **logistic_regression_SG** act as a standard gradient ascent algorithm? Hint: consider the training set we are using now."
+    "**Quiz Question:** For what value of batch size `B` above is the stochastic gradient ascent function **logistic_regression_SG** act as a standard gradient ascent algorithm? Hint: consider the training set we are using now.\n",
+    "  - length of train_data"
    ]
   },
   {
@@ -1522,12 +1523,12 @@
     "def make_plot(log_likelihood_all, len_data, batch_size, smoothing_window=1, label=''):\n",
     "    plt.rcParams.update({'figure.figsize': (9,5)})\n",
     "    log_likelihood_all_ma = np.convolve(np.array(log_likelihood_all), \\\n",
-    "                                        np.ones((smoothing_window,))/smoothing_window, mode='valid')\n",
-    "    plt.plot(np.array(range(smoothing_window-1, len(log_likelihood_all)))*float(batch_size)/len_data,\n",
+    "                                        np.ones((smoothing_window,)) / smoothing_window, mode='valid')\n",
+    "    plt.plot(np.array(range(smoothing_window-1, len(log_likelihood_all))) * float(batch_size)/len_data,\n",
     "             log_likelihood_all_ma, linewidth=4.0, label=label)\n",
     "    plt.rcParams.update({'font.size': 16})\n",
     "    plt.tight_layout()\n",
-    "    plt.xlabel('# of passes over data')\n",
+    "    plt.\n",
     "    plt.ylabel('Average log likelihood per data point')\n",
     "    plt.legend(loc='lower right', prop={'size':14})"
    ]
