C03w05 Fix Assign2./Julia + status update

--- a/C03/w05/C03w05_nb_pa2.ipynb
+++ b/C03/w05/C03w05_nb_pa2.ipynb
@@ -719,7 +719,7 @@
     "  1. The function **best_splitting_feature** should now accept an extra parameter `data_weights` to take account of weights of data points.\n",
     "  2. Instead of computing the number of mistakes in the left and right side of the split, we compute the weight of mistakes for both sides, add up the two weights, and divide it by the total weight of the data.\n",
     "  \n",
-    "Complete the following function. Comments starting with `DIFFERENT HERE` mark the sections where the weighted version differs from the original implementation."
+    "Complete the following function."
    ]
   },
   {
@@ -732,7 +732,6 @@
     "  # These variables will keep track of the best feature and the corresponding error\n",
     "  best_feature = None\n",
     "  best_error = float('+inf') \n",
-    "  num_points = float(len(data))\n",
     "\n",
     "  # Loop through each feature to consider splitting on that feature\n",
     "  for feature in features:\n",
@@ -748,7 +747,7 @@
     "    r_weighted_mistakes, _r_class = inter_node_weighted_mistakes(r_split[target], r_data_weights)\n",
     "     \n",
     "    ## Compute weighted error by computing\n",
-    "    s_1, s_2 = sum(l_data_weights), sum(r_data_weights) \n",
+    "    s_1, s_2 = sum(l_data_weights), sum(r_data_weights)\n",
     "    error = (l_weighted_mistakes + r_weighted_mistakes) / (s_1 + s_2) \n",
     "\n",
     "    ## If this is the best error we have found so far, store the feature and the error\n",
@@ -797,6 +796,7 @@
     "$$\n",
     "\n",
     "In the code above, we obtain $\\mathrm{E}(\\mathbf{\\alpha}, \\mathbf{\\hat{y}})$ from the two weights of mistakes from both sides, $\\mathrm{WM}(\\mathbf{\\alpha}_{\\mathrm{left}}, \\mathbf{\\hat{y}}_{\\mathrm{left}})$ and $\\mathrm{WM}(\\mathbf{\\alpha}_{\\mathrm{right}}, \\mathbf{\\hat{y}}_{\\mathrm{right}})$. First, notice that the overall weight of mistakes $\\mathrm{WM}(\\mathbf{\\alpha}, \\mathbf{\\hat{y}})$ can be broken into two weights of mistakes over either side of the split:\n",
+    "\n",
     "$$\n",
     "\\mathrm{WM}(\\mathbf{\\alpha}, \\mathbf{\\hat{y}})\n",
     "= \\sum_{i=1}^{n} \\alpha_i \\times 1[y_i \\neq \\hat{y_i}]\n",
@@ -804,7 +804,9 @@
     " + \\sum_{\\mathrm{right}} \\alpha_i \\times 1[y_i \\neq \\hat{y_i}]\\\\\n",
     "= \\mathrm{WM}(\\mathbf{\\alpha}_{\\mathrm{left}}, \\mathbf{\\hat{y}}_{\\mathrm{left}}) + \\mathrm{WM}(\\mathbf{\\alpha}_{\\mathrm{right}}, \\mathbf{\\hat{y}}_{\\mathrm{right}})\n",
     "$$\n",
+    "\n",
     "We then divide through by the total weight of all data points to obtain $\\mathrm{E}(\\mathbf{\\alpha}, \\mathbf{\\hat{y}})$:\n",
+    "\n",
     "$$\n",
     "\\mathrm{E}(\\mathbf{\\alpha}, \\mathbf{\\hat{y}})\n",
     "= \\frac{\\mathrm{WM}(\\mathbf{\\alpha}_{\\mathrm{left}}, \\mathbf{\\hat{y}}_{\\mathrm{left}}) + \\mathrm{WM}(\\mathbf{\\alpha}_{\\mathrm{right}}, \\mathbf{\\hat{y}}_{\\mathrm{right}})}{\\sum_{i=1}^{n} \\alpha_i}\n",
@@ -882,7 +884,7 @@
     "      if verbose: print(\"Stopping condition 1 reached.\")\n",
     "      return create_leaf(target_values, data_weights)\n",
     "    \n",
-    "    elif remaining_features == []:\n",
+    "    elif len(remaining_features) == 0:\n",
     "      if verbose: print(\"Stopping condition 2 reached.\")\n",
     "      return create_leaf(target_values, data_weights)\n",
     "      \n",
@@ -1671,7 +1673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1687,7 +1689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1742,7 +1744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1789,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1844,7 +1846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
