--- a/C04/w03/C04w03_nb_pa.ipynb
+++ b/C04/w03/C04w03_nb_pa.ipynb
@@ -359,7 +359,7 @@
    "source": [
     "## Students should write code here\n",
     "centroids3 = tf_idf[0:3, :]                                          ## 0, 1 and 2\n",
-    "dist3 = pairwise_distances(tf_idf, centroids3, metric='euclidean')   ## pairwise distance between all dat points and our 3 selected centroids\n",
+    "dist3 = pairwise_distances(tf_idf, centroids3, metric='euclidean')   ## pairwise distance between all data points and our 3 selected centroids\n",
     "dist = dist3[430][1]                                                 ## dist row 430, 2nd centrois (centroids3[1])"
    ]
   },
@@ -433,10 +433,7 @@
    "outputs": [],
    "source": [
     "assert len(cluster_assignment) == 59071 and \\\n",
-    "np.array_equal(np.bincount(cluster_assignment), np.array([23061, 10086, 25924])) #:\n",
-    "#     print('Pass') # count number of data points for each cluster\n",
-    "# else:\n",
-    "#     print('Check your code again.')"
+    "np.array_equal(np.bincount(cluster_assignment), np.array([23061, 10086, 25924])) #:"
    ]
   },
   {
@@ -1021,8 +1018,7 @@
    "source": [
     "for ix in range(3):\n",
     "  ndp = np.sum(cluster_assignment == ix)\n",
-    "  print(f\"cluster {ix:2d} has {ndp} data points\")\n",
-    "  \n",
+    "  print(f\"cluster {ix:2d} has {ndp} data points\")  \n",
     "## equiv. np.bincount(...)"
    ]
   },
