--- a/C04/w04/C04w04_nb_pa2.ipynb
+++ b/C04/w04/C04w04_nb_pa2.ipynb
@@ -114,8 +114,8 @@
    "outputs": [],
    "source": [
     "wiki = wiki.add_row_number()\n",
-    "tf_idf, map_word_to_index = sframe_to_scipy(wiki, 'tf_idf')\n",
-    "map_index_to_word = dict([[map_word_to_index[i], i] for i in map_word_to_index.keys()])"
+    "tf_idf, map_word_to_index, map_index_to_word = sframe_to_scipy(wiki, 'tf_idf')\n",
+    "# map_index_to_word = dict([[map_word_to_index[i], i] for i in map_word_to_index.keys()])"
    ]
   },
   {
@@ -134,8 +134,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 0 ns, sys: 5.48 ms, total: 5.48 ms\n",
-      "Wall time: 4.87 ms\n"
+      "CPU times: user 5.68 ms, sys: 203 µs, total: 5.89 ms\n",
+      "Wall time: 5.38 ms\n"
      ]
     }
    ],
@@ -200,8 +200,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 22s, sys: 16.1 s, total: 1min 38s\n",
-      "Wall time: 11.4 s\n"
+      "CPU times: user 1min 20s, sys: 15.9 s, total: 1min 36s\n",
+      "Wall time: 11.3 s\n"
      ]
     }
    ],
@@ -238,8 +238,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5.17 ms, sys: 985 µs, total: 6.15 ms\n",
-      "Wall time: 794 µs\n"
+      "CPU times: user 6.52 ms, sys: 1.21 ms, total: 7.73 ms\n",
+      "Wall time: 1.07 ms\n"
      ]
     }
    ],
