--- a/C04/w04/C04w04_nb_pa2.ipynb
+++ b/C04/w04/C04w04_nb_pa2.ipynb
@@ -114,8 +114,7 @@
    "outputs": [],
    "source": [
     "wiki = wiki.add_row_number()\n",
-    "tf_idf, map_word_to_index, map_index_to_word = sframe_to_scipy(wiki, 'tf_idf')\n",
-    "# map_index_to_word = dict([[map_word_to_index[i], i] for i in map_word_to_index.keys()])"
+    "tf_idf, map_word_to_index, map_index_to_word = sframe_to_scipy(wiki, 'tf_idf')"
    ]
   },
   {
