--- a/C04/w05/C04w05_nb_pa.ipynb
+++ b/C04/w05/C04w05_nb_pa.ipynb
@@ -513,7 +513,7 @@
     }
    ],
    "source": [
-    "topic_model = turicreate.topic_model.create(wiki_docs, num_topics=10, num_iterations=200, verbose=False);"
+    "topic_model = turicreate.topic_model.create(wiki_docs, num_topics=10, num_iterations=200, verbose=False)"
    ]
   },
   {
@@ -3319,13 +3319,6 @@
     "               xlab='Topics (sorted by weight of bottom 1000 words)',\n",
     "               ylab='Total Probability of Bottom 1000 Words')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
